--- a/src/components/Vote/VoteReview/VoteReview.module.scss
+++ b/src/components/Vote/VoteReview/VoteReview.module.scss
@@ -3,53 +3,64 @@ $background-color_2: #41464b;
 $background-color_3: transparent;
 
 .vote__review {
-	border-radius: 24px;
-	background-color: $background-color_1;
-	flex: 1.8;
-	margin-left: 16px;
-	h3 {
-		font-size: 21px;
-		font-weight: 800;
-		margin: 31px 0 18px 26px;
-	}
+  border-radius: 24px;
+  background-color: $background-color_1;
+  flex: 1.8;
+  margin-left: 16px;
+  h3 {
+    font-size: 21px;
+    font-weight: 800;
+    margin: 31px 0 18px 26px;
+  }
 }
 .votereview__item {
-	padding: 16px;
-	border-radius: 12px;
-	background-color: $background-color_2;
-	margin-bottom: 16px;
-	margin-left: 12px;
-	margin-right: 12px;
+  padding: 16px;
+  border-radius: 12px;
+  background-color: $background-color_2;
+  margin-bottom: 16px;
+  margin-left: 12px;
+  margin-right: 12px;
 }
-.votereview__top {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+
+.votereview {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  &__profile {
+    display: flex;
+    align-items: center;
+
+    &Detail {
+      margin-left: 4px;
+      &Name {
+        font-size: 14px;
+        margin: 0;
+      }
+      &Username {
+        font-weight: normal;
+        font-size: 12px;
+        margin: 0;
+        opacity: 0.7;
+      }
+    }
+  }
+
+  &__time {
+    margin: 0;
+    font-size: 12px;
+    font-weight: normal;
+  }
 }
-.votereview__profile {
-	display: flex;
-	align-items: center;
-}
-.votereview__profileDetail {
-	line-height: .1;
-}
-.votereview__username {
-	font-weight: normal;
-	font-size: 12px;
-}
-.votereview__time {
-	margin: 0;
-	font-size: 12px;
-	font-weight: normal;
-}
+
 .votereview__proper {
-	font-weight: normal;
-	font-size: 14px;
+  font-weight: normal;
+  font-size: 14px;
 }
-@media screen and (max-width:1024px) {
-	.vote__review {
-		margin-left: 0;
-		width: 342px;
-		background-color: $background-color_3;
-	}
+@media screen and (max-width: 1024px) {
+  .vote__review {
+    margin-left: 0;
+    width: 342px;
+    background-color: $background-color_3;
+  }
 }
