--- a/src/components/Home/Landing.module.scss
+++ b/src/components/Home/Landing.module.scss
@@ -2,108 +2,119 @@ $background-color_1: #2c3137;
 
 .landing__container {
   margin: 30px;
-}
-.landing__hero {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-}
-.balance {
-  background-color: $background-color_1;
-  width: 33%;
-  height: 200px;
-  border-radius: 24px;
-  box-sizing: border-box;
-  padding: 10px;
-}
-.completed__task {
-  background-color: $background-color_1;
-  width: 33%;
-  height: 200px;
-  border-radius: 24px;
-  box-sizing: border-box;
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  h3 {
-    font-size: 40px;
-    font-weight: 800;
+
+  .landing__hero {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+
+    .balance {
+      background-color: $background-color_1;
+      width: 33%;
+      height: 200px;
+      border-radius: 24px;
+      box-sizing: border-box;
+      padding: 10px;
+
+      &__account {
+        padding: 0px 27px 0;
+        font-weight: 600;
+        font-size: 16px;
+      }
+
+      &__detail {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        img {
+          height: 40px;
+          width: 40px;
+          margin-bottom: 6px;
+        }
+        h3 {
+          font-size: 40px;
+          font-weight: 800;
+        }
+        p {
+          margin: 0;
+          font-size: 14px;
+          font-weight: 400;
+        }
+      }
+    }
+
+    .completed__task {
+      background-color: $background-color_1;
+      width: 33%;
+      height: 200px;
+      border-radius: 24px;
+      box-sizing: border-box;
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      h3 {
+        font-size: 40px;
+        font-weight: 800;
+      }
+      p {
+        margin: 0;
+        font-size: 14px;
+        font-weight: 400;
+      }
+      img {
+        height: 48px;
+        width: 48px;
+        margin-bottom: 15px;
+      }
+    }
+
+    .get__started {
+      background-color: $background-color_1;
+      width: 33%;
+      height: 200px;
+      border-radius: 24px;
+      box-sizing: border-box;
+      padding: 10px;
+      padding-top: 50px;
+      padding-left: 30px;
+      background-image: url("../../data/nftgrid.png");
+      background-size: cover;
+      background-position: center;
+      &Landing {
+        font-size: 24px;
+        font-weight: 800;
+        line-height: 1.1;
+        margin-bottom: 16px;
+      }
+    }
   }
-  p {
-    margin: 0;
-    font-size: 14px;
-    font-weight: 400;
-  }
-  img {
-    height: 48px;
-    width: 48px;
-    margin-bottom: 15px;
-  }
-}
-.get__started {
-  background-color: $background-color_1;
-  width: 33%;
-  height: 200px;
-  border-radius: 24px;
-  box-sizing: border-box;
-  padding: 10px;
-  padding-top: 50px;
-  padding-left: 30px;
-  background-image: url("../../data/nftgrid.png");
-  background-size: cover;
-  background-position: center;
-  h3 {
-    font-size: 24px;
-    font-weight: 800;
-    line-height: 1.1;
-    margin-bottom: 16px;
+
+  .landing__ad {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: $background-color_1;
+    margin-top: 33px;
+    padding: 33px 28px;
+    border-radius: 24px;
+    background-image: url("../../data/pink.png");
+    background-size: cover;
+    background-position: center;
+    h3 {
+      width: 333px;
+      font-size: 24px;
+      font-weight: 800;
+      line-height: 1;
+    }
   }
 }
-.account__bal {
-  padding: 0px 27px 0;
-  font-weight: 600;
-  font-size: 16px;
-}
-.balance__detail {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  img {
-    height: 40px;
-    width: 40px;
-    margin-bottom: 6px;
-  }
-  h3 {
-    font-size: 40px;
-    font-weight: 800;
-  }
-  p {
-    margin: 0;
-    font-size: 14px;
-    font-weight: 400;
-  }
-}
-.landing__ad {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: $background-color_1;
-  margin-top: 33px;
-  padding: 33px 28px;
-  border-radius: 24px;
-  background-image: url("../../data/pink.png");
-  background-size: cover;
-  background-position: center;
-  h3 {
-    width: 333px;
-    font-size: 24px;
-    font-weight: 800;
-    line-height: 1;
-  }
-}
+
+
+
+//MEDIA QUERY 1024px
 @media screen and (max-width: 1024px) {
   .get__started {
     h3 {
