--- a/src/components/Setting/TransactionHistory/TransactionHistory.module.scss
+++ b/src/components/Setting/TransactionHistory/TransactionHistory.module.scss
@@ -3,51 +3,59 @@ $background-color_2: #18bb0c;
 $background-color_3: #e61b00;
 
 .TransactionHistory__container {
-	margin-top: 5px;
-	border-radius: 24px;
-	background-color: $background-color_1;
-	display: flex;
-	gap: 25px;
-	padding: 25px 35px;
+  margin-top: 5px;
+  border-radius: 24px;
+  background-color: $background-color_1;
+  display: flex;
+  gap: 25px;
+  padding: 25px 35px;
+
+  &Received {
+    flex: 1;
+  }
+
+  &Withdraw {
+    flex: 1;
+  }
 }
-.received__container {
-	flex: 1;
-}
-.withdraw__container {
-	flex: 1;
-}
+
 .TransactionHistory__title {
-	font-size: 21px;
-	font-weight: 800;
-	margin-bottom: 21px;
+  font-size: 21px;
+  font-weight: 800;
+  margin-bottom: 21px;
 }
+
 .transaction {
-	padding: 13.9px 13px 13.9px 13px;
-	border-radius: 16px;
-	background-color: $background-color_1;
-	display: flex;
-	margin-bottom: 16px;
-	img {
-		height: 24px;
-		width: 24px;
-		padding: 8px;
-		border-radius: 50%;
-		margin-right: 10px;
-	}
-}
-.transaction__amt {
-	margin: 0;
-	font-size: 16px;
-	font-weight: bold;
-}
-.transaction__time {
-	margin: 0;
-	font-size: 14px;
-	font-weight: 400;
-}
-.transaction__img.received {
-	background-color: $background-color_2;
-}
-.transaction__img.withdraw {
-	background-color: $background-color_3;
+  padding: 13.9px 13px 13.9px 13px;
+  border-radius: 16px;
+  background-color: $background-color_1;
+  display: flex;
+  margin-bottom: 16px;
+  &__img {
+    height: 24px;
+    width: 24px;
+    padding: 8px;
+    border-radius: 50%;
+    margin-right: 10px;
+
+    &.received {
+      background-color: $background-color_2;
+    }
+
+    &.withdraw {
+      background-color: $background-color_3;
+    }
+  }
+
+  &__amt {
+    margin: 0;
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  &__time {
+    margin: 0;
+    font-size: 14px;
+    font-weight: 400;
+  }
 }
