--- a/src/components/Setting/UserLog/UserLog.module.scss
+++ b/src/components/Setting/UserLog/UserLog.module.scss
@@ -3,44 +3,48 @@ $background-color_2: #474d57;
 $background-color_3: #18bb0c;
 
 .UserLog__container {
-	margin-top: 5px;
-	padding: 40px 30px 60px 30px;
-	border-radius: 24px;
-	background-color: $background-color_1;
+  margin-top: 5px;
+  padding: 40px 30px 60px 30px;
+  border-radius: 24px;
+  background-color: $background-color_1;
 }
 .userlog__item {
-	border-radius: 16px;
-	background-color: $background-color_2;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	width: 440px;
-	margin-bottom: 17px;
-	padding: 10px 13px;
-}
-.userlog__green {
-	height: 8px;
-	width: 8px;
-	background-color: $background-color_3;
-	border-radius: 50%;
-}
-.userlog__details {
-	display: flex;
-	align-items: center;
-	gap: 13px;
-}
-.userlog__detail {
-	p {
-		margin: 0;
-		font-size: 16px;
-		font-weight: bold;
-		margin-bottom: 3px;
-	}
-	font-size: 14px;
-	font-weight: normal;
-}
-.userlog__timeframe {
-	font-size: 12px;
-	font-weight: 500;
-	opacity: 0.7;
+  border-radius: 16px;
+  background-color: $background-color_2;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 440px;
+  margin-bottom: 17px;
+  padding: 10px 13px;
+
+  &Details {
+    display: flex;
+    align-items: center;
+    gap: 13px;
+
+    .userlog__detail {
+      p {
+        margin: 0;
+        font-size: 16px;
+        font-weight: bold;
+        margin-bottom: 3px;
+      }
+      font-size: 14px;
+      font-weight: normal;
+    }
+
+    .userlog__green {
+      height: 8px;
+      width: 8px;
+      background-color: $background-color_3;
+      border-radius: 50%;
+    }
+  }
+
+  .userlog__timeframe {
+    font-size: 12px;
+    font-weight: 500;
+    opacity: 0.7;
+  }
 }
