--- a/src/components/Tasks/DailyTask.module.scss
+++ b/src/components/Tasks/DailyTask.module.scss
@@ -1,4 +1,3 @@
-
 .task__container {
 	margin: 30px;
 }
@@ -16,41 +15,46 @@
 	display: flex;
 	align-items: center;
 	margin-bottom: 40px;
-}
-.task__img {
-	height: 80px;
-	width: 80px;
-	margin-right: 20px;
-}
-.task__airdrop {
-	display: flex;
-	flex-direction: column;
-	margin-right: 100px;
-	h3 {
-		font-weight: 800;
-		font-size: 18px;
+
+	&__img {
+		height: 80px;
+		width: 80px;
+		margin-right: 20px;
 	}
-	p {
-		margin: 0;
-		padding: 0;
-		font-weight: 500;
-		font-size: 16px;
+
+	&__airdrop {
+		display: flex;
+		flex-direction: column;
+		margin-right: 100px;
+		h3 {
+			font-weight: 800;
+			font-size: 18px;
+		}
+		p {
+			margin: 0;
+			padding: 0;
+			font-weight: 500;
+			font-size: 16px;
+		}
+	}
+
+	&__diamond {
+		display: flex;
+		align-items: center;
+		img {
+			height: 32px;
+			width: 32px;
+			margin-left: 90px;
+			margin-right: 8px;
+		}
+		h3 {
+			font-size: 24;
+			font-weight: 600;
+		}
 	}
 }
-.task__diamond {
-	display: flex;
-	align-items: center;
-	img {
-		height: 32px;
-		width: 32px;
-		margin-left: 90px;
-		margin-right: 8px;
-	}
-	h3 {
-		font-size: 24;
-		font-weight: 600;
-	}
-}
+
+
 @media screen and (max-width: 1024px) {
 	.task__title {
 		font-size: 24px;
