--- a/src/components/UI/Sidebar/SidebarAd.module.scss
+++ b/src/components/UI/Sidebar/SidebarAd.module.scss
@@ -1,27 +1,40 @@
-
 .advert {
-	padding: 10px 22px;
-	margin-top: 16px;
-	position: relative;
-	background: #fe7b59;
-	background-image: linear-gradient( 107deg, #fe7b59 0%, #fe497a 48%, #fd169c 100% );
-	border-radius: 24px;
-	h4 {
-		font-size: 20px;
-		font-weight: 700;
-		padding-bottom: 12px;
-	}
+  padding: 10px 22px;
+  margin-top: 16px;
+  position: relative;
+  background: #fe7b59;
+  background-image: linear-gradient(
+    107deg,
+    #fe7b59 0%,
+    #fe497a 48%,
+    #fd169c 100%
+  );
+  border-radius: 24px;
+  h4 {
+    font-size: 20px;
+    font-weight: 700;
+    padding-bottom: 12px;
+  }
 }
+
 .noadvert {
-	display: none;
+  display: none;
 }
 .trade__img {
-	height: 150px;
-	width: 150px;
+  height: 150px;
+  width: 150px;
 }
+
 .cancel {
-	position: absolute;
-	top: 5%;
-	right: 5%;
-	cursor: pointer;
+  position: absolute;
+  top: 5%;
+  right: 5%;
+  cursor: pointer;
+}
+
+//MEDIA QUERY 1024px
+@media screen and (max-width: 1024px) {
+  .advert {
+    display: none;
+  }
 }
