--- a/src/components/Vote/VoteAddProject/VoteAddProject.module.scss
+++ b/src/components/Vote/VoteAddProject/VoteAddProject.module.scss
@@ -6,48 +6,57 @@ $background-color_2: #2c3137;
 
 .VoteAddProject {
   margin: 48.5px;
-}
-.voteAdd__span {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  margin-bottom: 35px;
-  img {
-    cursor: pointer;
+  .voteAdd__span {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 35px;
+    img {
+      cursor: pointer;
+    }
+    h3 {
+      font-weight: 800;
+      font-size: 32px;
+    }
   }
-  h3 {
-    font-weight: 800;
-    font-size: 32px;
-  }
 }
+
+
+
 .voteaddProject__form {
   display: flex;
   flex-direction: column;
+
+  label {
+    font-size: 18px;
+    font-weight: normal;
+    color: $color_1;
+  }
+
+  &Input {
+    padding: 16px;
+    border-radius: 8px;
+    color: $color_1;
+    font-size: 16px;
+    font-weight: 500;
+    outline: none;
+    border: solid 1px #35373e;
+    background-color: $background-color_1;
+    margin-top: 8px;
+    margin-bottom: 24px;
+  }
+
+  textarea {
+    border: none;
+    outline: none;
+    resize: none;
+    margin-top: 16px;
+    margin-bottom: 24px;
+  }
 }
-.voteaddProject__input {
-  padding: 16px;
-  border-radius: 8px;
-  color: $color_1;
-  font-size: 16px;
-  font-weight: 500;
-  outline: none;
-  border: solid 1px #35373e;
-  background-color: $background-color_1;
-  margin-top: 8px;
-  margin-bottom: 24px;
-}
-label {
-  font-size: 18px;
-  font-weight: normal;
-  color: $color_1;
-}
-textarea {
-  border: none;
-  outline: none;
-  resize: none;
-  margin-top: 16px;
-  margin-bottom: 24px;
-}
+
+
+
 .aboutproject__text {
   border-radius: 12px;
   font-size: 16px;
@@ -56,12 +65,14 @@ textarea {
   margin-bottom: 17px;
   color: $color_1;
 }
+
 .photoUpload__p {
   margin: 0;
   font-weight: 500;
   font-size: 18px;
   margin-bottom: 8px;
 }
+
 .photosize {
   margin: 0;
   font-size: 14px;
@@ -69,12 +80,14 @@ textarea {
   color: $color_2;
   margin-bottom: 13px;
 }
+
 .upload__photo {
   display: flex;
   align-items: center;
   gap: 12px;
   margin-bottom: 24px;
 }
+
 .label__url {
   font-size: 14px;
   span {
@@ -82,6 +95,7 @@ textarea {
     color: $color_3;
   }
 }
+
 .upload {
   height: 103px;
   display: flex;
@@ -92,15 +106,18 @@ textarea {
   border: solid 1px #35373e;
   background-color: $background-color_1;
 }
+
 .photo {
   position: relative;
+
+  &__cancel {
+    position: absolute;
+    right: 3%;
+    top: 3%;
+    cursor: pointer;
+  }
 }
-.photo__cancel {
-  position: absolute;
-  right: 3%;
-  top: 3%;
-  cursor: pointer;
-}
+
 @media screen and (max-width: 1024px) {
   .voteAdd__span {
     h3 {
